--- a/突袭生成工具.html
+++ b/突袭生成工具.html
@@ -98,7 +98,7 @@
         </div>
 
     </div>
-    <p class="sm">初梦梦制作</p>
+    <p class="sm">SCUM-XX管理员工具</p>
     <script>
         document.getElementById('tj').addEventListener('click', function () {
             const boxContent = document.getElementById('box-content');
