--- a/突袭生成工具.html
+++ b/突袭生成工具.html
@@ -99,6 +99,7 @@
 
     </div>
     <p class="sm">SCUM-XX管理员工具</p>
+    <p class="sm">QQ群：685098660</p>
     <script>
         document.getElementById('tj').addEventListener('click', function () {
             const boxContent = document.getElementById('box-content');
