--- a/突袭生成工具.html
+++ b/突袭生成工具.html
@@ -97,10 +97,10 @@
             <button id="generateJson"><i class="far fa-save" style="margin-right: 5px;"></i>生成文件</button>
         </div>
 
-    </div>
-    <p class="sm">SCUM-XX管理员工具</p>
-    <p class="sm">QQ群：685098660</p>
-    <script>
+   <div class="fixed-bottom-right">
+            <p>SCUM-XX管理员工具</p>
+            <p>QQ群：685098660</p>
+        </div>
         document.getElementById('tj').addEventListener('click', function () {
             const boxContent = document.getElementById('box-content');
             const configItem = `
