--- a/突袭生成工具.html
+++ b/突袭生成工具.html
@@ -97,10 +97,9 @@
             <button id="generateJson"><i class="far fa-save" style="margin-right: 5px;"></i>生成文件</button>
         </div>
 
-   <div class="fixed-bottom-right">
-            <p>SCUM-XX管理员工具</p>
-            <p>QQ群：685098660</p>
-        </div>
+    </div>
+    <p class="sm">SCUM-XX管理员工具  QQ群：685098660  本网页作者：初梦梦</p>
+    <script>
         document.getElementById('tj').addEventListener('click', function () {
             const boxContent = document.getElementById('box-content');
             const configItem = `
